--- a/src/WMS/Views/Shared/_LoginPartial.cshtml
+++ b/src/WMS/Views/Shared/_LoginPartial.cshtml
@@ -25,7 +25,7 @@ else
         <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">@_sharedLocalizer["REGISTER"]</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">@_sharedLocalizer["LOGIN"]</a>
     </li>
 }
 </ul>
