--- a/src/WMS/Views/Account/Login.cshtml
+++ b/src/WMS/Views/Account/Login.cshtml
@@ -11,13 +11,13 @@
                 <h3>@Html.Raw(@ViewBag.company)</h3>
             </div>
             <div class="login-box-body">
-                <form method="post" onsubmit="return false">
+                <form method="post" >
                     <div class="form-group has-feedback">
-                        <input type="text" v-model="UserNickname" id="test" autofocus class="form-control" placeholder="@_sharedLocalizer["USER"]">
+                        <input type="text" Name="Name" id="Name" autofocus class="form-control" placeholder="@_sharedLocalizer["USER"]">
                         <span class="fa fa-user form-control-feedback"></span>
                     </div>
                     <div class="form-group has-feedback">
-                        <input type="password" v-model="Pwd" class="form-control" placeholder="@_sharedLocalizer["PASSWORD"]" autocomplete="off">
+                        <input type="password" name="Passwors" id="Password" class="form-control" placeholder="@_sharedLocalizer["PASSWORD"]" autocomplete="off">
                         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                     </div>
                     <div class="row">
