--- a/src/WMS/Views/Account/Register.cshtml
+++ b/src/WMS/Views/Account/Register.cshtml
@@ -7,19 +7,21 @@
 
 @{
     Layout = "/Views/Shared/_Layout.cshtml";
-    @model ru.EmlSoft.WMS.Data.Dto.User
+    @model ru.EmlSoft.WMS.Data.Dto.UserDto
 }
 
 <div id="app" v-cloak>
     <form class="form-horizontal" method="Post" >
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="box-body">
             <table class="table table-bordered">
                 <tr>
                     <td>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label"><span class="c-red">*</span>@_sharedLocalizer["USERNAME"]</label>
+                            <label class="control-label col-sm-2" asp-for=UserName></label>
                             <div class="col-sm-10">
-                                <input name="UserName" id="UserName" type="text" class="form-control" value="@Model?.UserName" />
+                                <input asp-for=UserName type="text" class="form-control" />
+                                <span asp-validation-for=UserName class="text-danger"></span>
                             </div>
                         </div>
                     </td>
@@ -27,17 +29,19 @@
                 <tr>
                     <td>
                         <div class="form-group" v-if="UserId<=0">
-                            <label class="control-label col-sm-2"><span class="c-red">*</span>@_sharedLocalizer["PASSWORD"]</label>
+                            <label class="control-label col-sm-2" asp-for="Phone"></label>
                             <div class="col-sm-10">
                                 <input name = "Passwd1" id = "Passwd1" type="password" class="form-control" autocomplete="off" value="" placeholder="@_sharedLocalizer["PASSWORD"]">
+                                <span asp-validation-for="Passwd1" class="text-danger"></span>
                             </div>
                         </div>
                     </td>
                     <td>
                         <div class="form-group" v-if="UserId<=0">
-                            <label class="control-label col-sm-2"><span class="c-red">*</span>@_sharedLocalizer["PASSWORD_CONFIRM"]</label>
+                            <label class="control-label col-sm-2" asp-for="Phone"></label>
                             <div class=" col-sm-10">
                                 <input name = "Passwd2" id = "Passwd2" type="password" class="form-control" autocomplete="off" placeholder="@_sharedLocalizer["PASSWORD_CONFIRM"]">
+                                <span asp-validation-for="Passwd2" class="text-danger"></span>
                             </div>
                         </div>
                     </td>
@@ -45,9 +49,10 @@
                 <tr>
                     <td>
                         <div class="form-group">
-                            <label class="control-label col-sm-2"><span class="c-red">*</span>@_sharedLocalizer["TELEPHONE"]</label>
+                            <label class="control-label col-sm-2" asp-for="Phone"></label>
                             <div class="col-sm-10">
                                 <input name = "Phone" id = "Phone" type="text" class="form-control">
+                                <span asp-validation-for="Phone" class="text-danger"></span>
                             </div>
                         </div>
                     </td>
@@ -56,6 +61,7 @@
                             <label class="col-sm-2 control-label"><span class="c-red">*</span>@_sharedLocalizer["EMAIL"]</label>
                             <div class="col-sm-10">
                                 <input name = "Email" id = "Email" type="text" class="form-control">
+                                <span asp-validation-for="Email" class="text-danger"></span>
                             </div>
                         </div>
                     </td>
@@ -69,3 +75,8 @@
         </div>
     </form>
 </div>
+
+@section scripts{ 
+<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
