--- a/src/WMS/Views/Account/Register.cshtml
+++ b/src/WMS/Views/Account/Register.cshtml
@@ -18,7 +18,7 @@
                 <tr>
                     <td>
                         <div class="form-group">
-                            <label class="control-label col-sm-2" asp-for=UserName></label>
+                            <label class="control-label col-sm-6" asp-for=UserName></label>
                             <div class="col-sm-10">
                                 <input asp-for=UserName type="text" class="form-control" />
                                 <span asp-validation-for=UserName class="text-danger"></span>
@@ -29,7 +29,7 @@
                 <tr>
                     <td>
                         <div class="form-group" v-if="UserId<=0">
-                            <label class="control-label col-sm-2" asp-for=Passwd1></label>
+                            <label class="control-label col-sm-6" asp-for=Passwd1></label>
                             <div class="col-sm-10">
                                 <input asp-for=Passwd1 type="password" class="form-control" autocomplete="off">
                                 <span asp-validation-for="Passwd1" class="text-danger"></span>
@@ -38,8 +38,8 @@
                     </td>
                     <td>
                         <div class="form-group" v-if="UserId<=0">
-                            <label class="control-label col-sm-2" asp-for=Passwd2></label>
-                            <div class=" col-sm-10">
+                            <label class="control-label col-sm-6" asp-for=Passwd2></label>
+                            <div class="col-sm-10">
                                 <input asp-for=Passwd2 type="password" class="form-control" autocomplete="off">
                                 <span asp-validation-for="Passwd2" class="text-danger"></span>
                             </div>
@@ -49,7 +49,7 @@
                 <tr>
                     <td>
                         <div class="form-group">
-                            <label class="control-label col-sm-2" asp-for="Phone"></label>
+                            <label class="control-label col-sm-6" asp-for="Phone"></label>
                             <div class="col-sm-10">
                                 <input name = "Phone" id = "Phone" type="text" class="form-control">
                                 <span asp-validation-for="Phone" class="text-danger"></span>
@@ -58,7 +58,7 @@
                     </td>
                     <td>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label"><span class="c-red">*</span>@_sharedLocalizer["EMAIL"]</label>
+                            <label class="control-label col-sm-6" asp-for="Email"></label>
                             <div class="col-sm-10">
                                 <input name = "Email" id = "Email" type="text" class="form-control">
                                 <span asp-validation-for="Email" class="text-danger"></span>
