--- a/src/WMS/Views/Account/Login.cshtml
+++ b/src/WMS/Views/Account/Login.cshtml
@@ -4,28 +4,43 @@
 
 @{
     Layout = "/Views/Shared/_Layout.cshtml";
+    @model ru.EmlSoft.WMS.Data.Dto.UserDto
+
 }
-    <div id="app">
-        <div class="login-box">
-            <div class="login-logo">
-                <h3>@Html.Raw(@ViewBag.company)</h3>
-            </div>
-            <div class="login-box-body">
-                <form method="post" >
-                    <div class="form-group has-feedback">
-                        <input type="text" Name="Name" id="Name" autofocus class="form-control" placeholder="@_sharedLocalizer["USER"]">
-                        <span class="fa fa-user form-control-feedback"></span>
+<div id="app">
+    <div class="login-box">
+        <div class="login-logo">
+            <h3>@Html.Raw(@ViewBag.company)</h3>
+        </div>
+        <div class="login-box-body">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label class="control-label col-sm-6" asp-for=UserName></label>
+                    <div class="col-sm-10">
+                        <input asp-for=UserName type="text" class="form-control" />
+                        <span asp-validation-for=UserName class="text-danger"></span>
                     </div>
-                    <div class="form-group has-feedback">
-                        <input type="password" name="Passwors" id="Password" class="form-control" placeholder="@_sharedLocalizer["PASSWORD"]" autocomplete="off">
-                        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-sm-6" asp-for=Passwd1></label>
+                    <div class="col-sm-10">
+                        <input asp-for=Passwd1 type="password" class="form-control" autocomplete="off">
+                        <span asp-validation-for="Passwd1" class="text-danger"></span>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <button type="submit" class="btn btn-primary btn-block btn-flat">@_sharedLocalizer["LOGIN"]</button>
-                        </div>
+                </div>
+                <div class="box-footer">
+                    <div class="pull-right box-tools">
+                        <button type="submit" class="btn btn-primary btn-block btn-flat">@_sharedLocalizer["LOGIN"]</button>
                     </div>
-                </form>
-            </div>
+                </div>
+            </form>
         </div>
     </div>
+</div>
+
+@section scripts{ 
+<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
