--- a/src/WMS/Views/Account/Register.cshtml
+++ b/src/WMS/Views/Account/Register.cshtml
@@ -10,7 +10,7 @@
     @model ru.EmlSoft.WMS.Data.Dto.UserDto
 }
 
-<div id="app" v-cloak>
+<div id="app"v>
     <form class="form-horizontal" method="Post" >
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="box-body">
@@ -28,7 +28,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="form-group" v-if="UserId<=0">
+                        <div class="form-group">
                             <label class="control-label col-sm-6" asp-for=Passwd1></label>
                             <div class="col-sm-10">
                                 <input asp-for=Passwd1 type="password" class="form-control" autocomplete="off">
@@ -37,7 +37,7 @@
                         </div>
                     </td>
                     <td>
-                        <div class="form-group" v-if="UserId<=0">
+                        <div class="form-group">
                             <label class="control-label col-sm-6" asp-for=Passwd2></label>
                             <div class="col-sm-10">
                                 <input asp-for=Passwd2 type="password" class="form-control" autocomplete="off">
