--- a/src/WMS/Views/Shared/_LoginPartial.cshtml
+++ b/src/WMS/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,6 @@
 @using ru.EmlSoft.WMS.Localization
 
 @inject SignInManager<ru.EmlSoft.WMS.Data.Abstract.Identity.User> SignInManager
-@inject UserManager<ru.EmlSoft.WMS.Data.Abstract.Identity.User> UserManager
 @inject IHtmlLocalizer<SharedResource> _sharedLocalizer
 
 
@@ -14,7 +13,7 @@
         <a  class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Manage" title="Manage">@_sharedLocalizer["HELLO"] @User.Identity?.Name!</a>
     </li>
     <li class="nav-item">
-        <form  class="form-inline" asp-area="" asp-controller="Account" asp-action="Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+        <form  class="form-inline" asp-area="" asp-controller="Account" asp-action="Logout">
             <button  type="submit" class="nav-link btn btn-link text-dark">@_sharedLocalizer["LOGOUT"]</button>
         </form>
     </li>
