--- a/src/WMS/Views/Shared/_MainSidebar.cshtml
+++ b/src/WMS/Views/Shared/_MainSidebar.cshtml
@@ -1,10 +1,10 @@
 ﻿<!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
   <!-- Brand Logo -->
-  <a href="index3.html" class="brand-link">
+  <a href="http://www.eml-soft.ru" class="brand-link">
     <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
          style="opacity: .8">
-    <span class="brand-text font-weight-light">AdminLTE 3</span>
+    <span class="brand-text font-weight-light">Eml-soft WMS</span>
   </a>
 
   <!-- Sidebar -->
