--- a/src/WMS/Views/Account/Login.cshtml
+++ b/src/WMS/Views/Account/Login.cshtml
@@ -1,6 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using Microsoft.Extensions.Localization;
 @using ru.EmlSoft.WMS.Localization
-@inject IHtmlLocalizer<SharedResource> _sharedLocalizer
+
+@inject IStringLocalizer<SharedResource> _sharedLocalizer
 
 @{
     Layout = "/Views/Shared/_Layout.cshtml";
@@ -41,6 +43,6 @@
 </div>
 
 @section scripts{ 
-<script src="~/lib/lib/jquery-validate/jquery.validate.js"></script>
+<script src="~/lib/jquery-validate/jquery.validate.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 }
