--- a/src/WMS/Views/Shared/_Layout.cshtml
+++ b/src/WMS/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/adminlte.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/ru.EmlSoft.WMS.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/WMS.styles.css" asp-append-version="true" />
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
