--- a/src/WMS/Views/Shared/_Layout.cshtml
+++ b/src/WMS/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             &copy; 2022 - ru.EmlSoft.WMS - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
