--- a/src/WMS/Views/Shared/Components/Menu/Default.cshtml
+++ b/src/WMS/Views/Shared/Components/Menu/Default.cshtml
@@ -1,8 +1,8 @@
-﻿@using ru.EmlSoft.WMS.Data.Abstract.Access
+﻿@using ru.emlsoft.WMS.Data.Abstract.Access
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Mvc.Localization
-@using ru.EmlSoft.WMS.Data.Dto
-@using ru.EmlSoft.WMS.Localization
+@using ru.emlsoft.WMS.Data.Dto
+@using ru.emlsoft.WMS.Localization
 @using Microsoft.Extensions.Localization;
 
 @model IEnumerable<MenuDto>
