--- a/src/WMS/Views/Shared/_LoginPartial.cshtml
+++ b/src/WMS/Views/Shared/_LoginPartial.cshtml
@@ -1,10 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Mvc.Localization
-@using ru.EmlSoft.WMS.Localization
+@using ru.emlsoft.WMS.Localization
 @using Microsoft.Extensions.Localization;
 
 
-@inject SignInManager<ru.EmlSoft.WMS.Data.Abstract.Identity.User> SignInManager
+@inject SignInManager<ru.emlsoft.WMS.Data.Abstract.Identity.User> SignInManager
 @inject IStringLocalizer<SharedResource> _sharedLocalizer
 
 
