--- a/src/WMS/Views/Shared/_MainSidebar.cshtml
+++ b/src/WMS/Views/Shared/_MainSidebar.cshtml
@@ -1,8 +1,8 @@
-﻿@using ru.EmlSoft.WMS.Data.Abstract.Access
+﻿@using ru.emlsoft.WMS.Data.Abstract.Access
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Mvc.Localization
-@using ru.EmlSoft.WMS.Data.Dto
-@using ru.EmlSoft.WMS.Localization
+@using ru.emlsoft.WMS.Data.Dto
+@using ru.emlsoft.WMS.Localization
 @using Microsoft.Extensions.Localization;
 
 <!-- Main Sidebar Container -->
@@ -10,7 +10,7 @@
     <!-- Brand Logo -->
 
     <a href="http://www.eml-soft.ru" class="brand-link">
-        <img src="dist/img/emlsoft.png" alt="EmlSoft" class="brand-image img-circle elevation-3"
+        <img src="dist/img/emlsoft.png" alt="emlsoft" class="brand-image img-circle elevation-3"
              style="opacity: .8">
         <span class="brand-text font-weight-light">Eml-soft WMS</span>
     </a>
