--- a/src/WMS/Views/Account/CreateCompany.cshtml
+++ b/src/WMS/Views/Account/CreateCompany.cshtml
@@ -1,17 +1,17 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization;
-@using ru.EmlSoft.WMS.Localization
-@using ru.EmlSoft.WMS.Data.Dto
+@using ru.emlsoft.WMS.Localization
+@using ru.emlsoft.WMS.Data.Dto
 
 @inject IStringLocalizer<SharedResource> _sharedLocalizer
 
 
 @{
     Layout = "/Views/Shared/_Layout.cshtml";
-    @model ru.EmlSoft.WMS.Data.Dto.CompanyDto
+    @model ru.emlsoft.WMS.Data.Dto.CompanyDto
 }
 
-<div id="app"v>
+<div id="app">
     <form class="form-horizontal" method="Post" >
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="box-body">
