--- a/src/WMS/Views/_ViewImports.cshtml
+++ b/src/WMS/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using ru.EmlSoft.WMS
-@using ru.EmlSoft.WMS.Models
+﻿@using ru.emlsoft.WMS
+@using ru.emlsoft.WMS.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
