--- a/src/WMS/Views/Storage/Create.cshtml
+++ b/src/WMS/Views/Storage/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@using ru.EmlSoft.WMS.Data.Dto.Storage;
+﻿@using ru.emlsoft.WMS.Data.Dto.Storage;
 
 @{
     ViewData["Title"] = "Создание склада";
