--- a/src/WMS/Views/Storage/Index.cshtml
+++ b/src/WMS/Views/Storage/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@using ru.EmlSoft.WMS.Data.Dto.Storage;
+﻿@using ru.emlsoft.WMS.Data.Dto.Storage;
 
-@model ru.EmlSoft.WMS.Data.Dto.PageDto<StorageDto>;
+@model ru.emlsoft.WMS.Data.Dto.PageDto<StorageDto>;
 
 @{
     Layout = "/Views/Shared/_Layout.cshtml";
