--- a/src/WMS/Views/Account/Login.cshtml
+++ b/src/WMS/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization;
-@using ru.EmlSoft.WMS.Localization.Resources
+@using ru.emlsoft.WMS.Localization.Resources
 
 
 @{
