Fix Manu localization

--- a/src/WMS/Views/Shared/_MainSidebar.cshtml
+++ b/src/WMS/Views/Shared/_MainSidebar.cshtml
@@ -5,6 +5,8 @@
 @using ru.emlsoft.WMS.Localization
 @using Microsoft.Extensions.Localization;
 
+@inject IStringLocalizer<SharedResource> _sharedLocalizer
+
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
